environment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-node-app
  namespace: dummy-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dummy-node-app
  template:
    metadata:
      labels:
        app: dummy-node-app
    spec:
      containers:
        - name: dummy-node-app
          image: IMAGE_PLACEHOLDER
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
