environment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-node-app-svc
  namespace: dummy-app
spec:
  selector:
    app: dummy-node-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
